Fixed getUUIDList